# teamwork-mcp

./: Dockerfile  README.md  find_budgets.py  pyproject.toml  search_projects.py  server.py  test_budget.py  test_budget_include.py  test_list_budgets.py  verify_budget.py  verify_fix.py  verify_minimal.py
.github/workflows/: docker-publish.yml
teamwork_mcp/: __init__.py  client.py  server.py
